[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "atcoder-utils"
version = "0.0.1"
description = "My personal hacky utils for AtCoder."
readme = "README.md"
dependencies = [
    "requests",
    "urllib3",
    "beautifulsoup4",
    "lxml"
]

[project.scripts]
acset = "acutils.acset:main"
actest = "acutils.actest:main"

[tool.setuptools.package-data]
"acutils.config_template" = ["**"]
